# powo.roles

./: .gitignore  .gitmodules  .travis.yml  .yamllint  Pipfile  README.md  clickables.py  clickables.yml  galaxy.yml  pyproject.toml  requirements.yml  task-aliases.yml  wip.md
bootstrap/: bootstrap.sh  environment.yml  pyproject.toml
defaults/: main.yml
dependencies/: requirements.yml
filter_plugins/: distro.py
frecklecutables/: all.yml  blabla  init-user  install  rpmfusion
handlers/: main.yml
inventory/: ansible.cfg
meta/: main.yml
molecule/default/: create.yml  molecule.yml  playbook.yml
molecule/missing-binding/: prepare.yml
play/: play.yml
playbooks/: init-user.yml  install.yml
playbooks/host_vars/: localhost.yml
powo.apache/tasks/: main.yml
powo.archive/meta/: main.yml
powo.archive/tasks/: main.yml
powo.checks/: README.md
powo.checks/vars/: main.yml
powo.chrome/: README.md  requirements.yml
powo.chrome/defaults/: main.yml
powo.chrome/meta/: main.yml
powo.chrome/tasks/: repository_Debian.yml
powo.eclipse/: .yamllint  requirements.yml
powo.eclipse/tasks/: main.yml
powo.eclipse/vars/: main.yml
powo.filesystem/meta/: main.yml
powo.firewalld/handlers/: main.yml
powo.firewalld/tasks/: main.yml
powo.gnome-shell/tasks/: main.yml
powo.java/defaults/: main.yml
powo.java/tasks/: java_packages.yml
powo.java/vars/: main.yml
powo.luke/meta/: main.yml
powo.luke/tasks/: luke_item.yml
powo.misc/: requirements.yml
tasks/: atom-deb.yml  atom-rpm.yml  bash.yml  code-deb.yml  dnf.yml  docker.yml  eclipse_item.yml  epel.yml  flameshot.yml  java_item.yml  luke_item.yml  mailhog.yml  main.yml  nexus-yum.yml  packagekit.yml  repository_Debian.yml  repository_RedHat.yml  requirement.yml  rpmfusion.yml  ssh.yml  user.yml  yum.yml
templates/: eclipse-desktop.jinja  profile.d_powo.conf.jinja
vars/: main.yml
(+104 files in other folders)
