[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powo_roles"
version = "1.0.0"
requires-python = ">=3.9"

dependencies = [
  "ansible-core"
]

[tool.hatch.envs.default.env-vars]
ANSIBLE_CONFIG = "./inventory/ansible.cfg"

[tool.hatch.envs.default.scripts]
powo-galaxy-clean = "rm -rf dependencies/collections/* dependencies/roles/*"
powo-galaxy = """\
env ANSIBLE_COLLECTIONS_PATH=dependencies/collections/ \
ANSIBLE_ROLES_PATH=dependencies/roles/ \
ansible-galaxy install --force -r dependencies/requirements.yml \
"""
powo-install = "powo-galaxy && ansible-playbook --diff -K powo.tools.install {args}"
powo-install-only = "ansible-playbook --diff -K powo.tools.install {args}"
powo-full = "powo-galaxy-clean && powo-galaxy && ansible-playbook --diff -K powo.tools.install {args}"
# déplacement des données docker (à faire une seule fois)
powo-init = "powo-galaxy && ansible-playbook --diff -K powo.tools.install -e '{{\"move_docker\": true}}' {args}"
list-commands = [
    "echo 'Commands:'; hatch env show --json | jq --raw-output '.default.scripts | keys[]'"
]


# Il faut ignorer les autres ressources python
[tool.ruff]
exclude = ["ansible_collections", "dependencies"]
