[tool.poetry]
name = "powo_roles"
# this is a fake/unused version
version = "0.1.0"
description = ""
authors = ""

[tool.poetry.dependencies]
python = ">=3.5"
clickable = { git = "https://github.com/lalmeras/clickable.git", branch = "dev" }
clickable_ansible = { git = "https://github.com/lalmeras/clickable_ansible.git", branch = "master" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
powo-roles = "clickable.click:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


